Co-authored-by: arisharma43 <arisharma43@users.noreply.github.com>

--- a/output/output.html
+++ b/output/output.html
@@ -1,12 +1,22 @@
-
 <html>
-<head>
-<title>a website about trees</title>
-<script src='script.js'></script>
-<style>
-<!--style only-->
-body{
-background-color:silver;}
-<body>
-</body>
-background-image:<img src='https://unsplash.com/photos/u3Me2cOuUK4/download'alt='' width='400' height='400'><img src='https://unsplash.com/photos/z1NGiRmJHC0/download'alt='' width='400' height='400'><img src='https://unsplash.com/photos/eAGFt-1q4KY/download'alt='' width='400' height='400'>
+ <head>
+  <title>
+   a website about books
+  </title>
+ </head>
+ <bodystyle='background-image:src('https: download')="" lhnwegq3ne0="" photos="" unsplash.com="">
+  color: black
+font-family: Arial, sans-serif
+text-align:center;
+margin-left:auto;marginright:auto;width:80%
+height:100%;navigator-y:-80%navigator-x:-70%navaretor:-30%navigator-x0px;navigatorheight:100%;navigatorwidth1px;}//navigation menu&gt;
+  <!--the rest of the page-->
+  <img alt="" height="400" src="https://unsplash.com/photos/LhNwegq3Ne0/download" width="400"/>
+  <img alt="" height="400" src="https://unsplash.com/photos/TuNYNsK0OC0/download" width="400"/>
+  <img alt="" height="400" src="https://unsplash.com/photos/LHiIrY704pQ/download" width="400"/>
+  <style>
+  </style>
+  <script>
+  </script>
+ </bodystyle='background-image:src('https:>
+</html>
